--- a/Doors/style.css
+++ b/Doors/style.css
@@ -4,16 +4,33 @@
     justify-content: center;
 }
 
-head, body, html{
+
+body{
     height: 100%;
     width: 100%;
     border: solid black 2px;
+    background-color: black;
 }
 
 
 img{
     position: relative;
-    width: 10%;
+    width: 12%;
     height: auto;
 
+}
+
+h1{
+    font: helvetica;
+    font-weight: 900;
+    display: block;
+    text-align: center;
+    color: white;
+    margin-top: 8%;
+
+}
+
+.door1{
+    margin-left: 28%;
+    margin-top: 2%;
 }
