--- a/Doors/style.css
+++ b/Doors/style.css
@@ -1,3 +1,12 @@
+@keyframes openDoor{
+    from{
+
+    }
+    to{
+
+    }
+}
+
 .flexbox{
     display: flex;
     align-items: center;
@@ -10,13 +19,17 @@ body{
     width: 100%;
     border: solid black 2px;
     background-color: black;
+    perspective: 1000px;
+
 }
 
 
 img{
     position: relative;
-    width: 12%;
-    height: auto;
+    height: 70vh;
+    width: auto;
+    padding: 0px;
+    border-bottom: 0px;
 
 }
 
@@ -26,11 +39,10 @@ h1{
     display: block;
     text-align: center;
     color: white;
-    margin-top: 8%;
 
 }
 
 .door1{
-    margin-left: 28%;
-    margin-top: 2%;
+    margin-left: 20%;
+
 }
