--- a/cssPosition/style.css
+++ b/cssPosition/style.css
@@ -1,20 +1,48 @@
 /* body{
     position: relative;
 } */
-
+.title{
+    /* border: 2px solid orange; */
+    width: 100%;
+    height: 50px;
+    background: #78E84E;
+    font-size: 45px;
+    text-align: center;
+}
 .container {
     min-height: 100vh;
     background-color: #A3523F;
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
+    /* display: flex; */
+    /* flex-flow: row wrap; */
+    /* justify-content: center; */
+    overflow: scroll;
+
 }
 
 .bg_top {
     height: 50vh;
-    position: sticky;
-    top: 0;
+    width: 100vw;
+    position: relative;
+    /* top: 0; */
     background-color: #423370;
+}
+
+.group{
+    background-color: 10px solid pink;
+    width: 100%;
+
+    display: flex;
+    flex-flow: row;
+    justify-content: center;
+}
+
+.devider{
+    border: 2px solid black;
+    width: 100vw;
+    height: 50px;
+    background: rebeccapurple;
+    text-align: center;
+    font-size: 45px;
 }
 
 .card {
